Changes
=======

1.1 (unreleased)
----------------

* Add grok.View permissions to functional tests (requires grokcore.security 1.1)

1.0 (2008-11-15)
----------------

* Created ``grokcore.viewlet`` in November 2008 by factoring
  ``zope.viewlet``-based components, grokkers and directives out of
  Grok.
