@@ -4,13 +4,19 @@ parts = interpreter test
 extends = versions.cfg
 versions = versions
 
+
 [versions]
 grokcore.viewlet =
+
+grokcore.view = 1.9
+# ^^^ can be removed after update of grok version list
+
 
 [interpreter]
 recipe = zc.recipe.egg
 eggs = grokcore.viewlet
 interpreter = python
+
 
 [test]
 recipe = zc.recipe.testrunner
