@@ -4,6 +4,8 @@ Changes
 1.1 (unreleased)
 ----------------
 
+* Adapted tests to new grokcore.view release: switched from View to CodeView.
+
 * Add grok.View permissions to functional tests (requires grokcore.security 1.1)
 
 1.0 (2008-11-15)
